@startuml
class Batalla{
    -victoriasAtacante: int
    -victoriasDefensor: int
    -dadosParaTirarAtacante: int
    -dadosParaTirarDefensor: int

    +obtenerDadoDefensor(Pais pais): Dados
    +obtenerDadosAtacante(Pais pais, int tropasParaAtacar): Dados
    +obtenerVictoriosoDeGuerra(Pais atacante, Pais defensor, int tropasAtacantes)
    -determinarVictoriosoDeGuerra(Pais paisAtacante, paisDefensor): Pais
    +obtenerPerdedorDeBatalla(Dado dadoAtacante, Dado dadoDefensor): Pais
}

class LanzadorDado{
 int dadosParaTirarAtacante;
 int dadosParaTirarDefensor;
     +obtenerDadoDefensor(Pais pais): Dados
     +obtenerDadosAtacante(Pais pais, int tropasParaAtacar): Dados
}

class Dado{
    +valor: int
    -obtenerDado():int
    +getValor():int
    +esMayorQue(Dado dado): boolean
}

Batalla-->LanzadorDado
LanzadorDado--->Dado

@enduml